--- a/mqttpublishplugin/src/main/res/layout/main.xml
+++ b/mqttpublishplugin/src/main/res/layout/main.xml
@@ -15,45 +15,65 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:weightSum="1">
 
-    <EditText
-        android:id="@+id/broker_ip"
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="6dip"
-        android:layout_marginRight="6dip"
-        android:layout_marginTop="8dip"
-        android:hint="@string/broker_ip_hint" />
-    
-    <EditText
-        android:id="@+id/broker_port"
+        android:layout_gravity="center_horizontal">
+
+        <EditText
+            android:id="@+id/broker_ip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="6dip"
+            android:layout_marginRight="6dip"
+            android:layout_marginTop="8dip"
+            android:hint="@string/broker_ip_hint"
+            android:layout_weight="1" />
+
+        <EditText
+            android:id="@+id/broker_port"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="6dip"
+            android:layout_marginRight="6dip"
+            android:layout_marginTop="8dip"
+            android:hint="@string/broker_port_hint"
+            android:inputType="number"
+            android:layout_weight="0.25" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="6dip"
-        android:layout_marginRight="6dip"
-        android:layout_marginTop="8dip"
-        android:hint="@string/broker_port_hint" />
-    
-    <EditText
-        android:id="@+id/username"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="6dip"
-        android:layout_marginRight="6dip"
-        android:layout_marginTop="8dip"
-        android:hint="@string/username_hint" />
-    
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="6dip"
-        android:layout_marginRight="6dip"
-        android:layout_marginTop="8dip"
-        android:inputType="textPassword"
-        android:hint="@string/password_hint" />
-    
+        android:layout_gravity="center_horizontal">
+
+        <EditText
+            android:id="@+id/username"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="6dip"
+            android:layout_marginRight="6dip"
+            android:layout_marginTop="8dip"
+            android:hint="@string/username_hint"
+            android:layout_weight="1" />
+
+        <EditText
+            android:id="@+id/password"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="6dip"
+            android:layout_marginRight="6dip"
+            android:layout_marginTop="8dip"
+            android:inputType="textPassword"
+            android:hint="@string/password_hint"
+            android:layout_weight="1" />
+    </LinearLayout>
+
     <EditText
         android:id="@+id/message_topic"
         android:layout_width="match_parent"
@@ -70,13 +90,25 @@
         android:layout_marginLeft="6dip"
         android:layout_marginRight="6dip"
         android:layout_marginTop="8dip"
-        android:hint="@string/message_payload_hint" />
+        android:hint="@string/message_payload_hint"
+        android:inputType="textMultiLine"
+        android:gravity="top"
+        android:layout_marginBottom="8dp"
+        android:layout_weight="1" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/retain_flag"
+        android:id="@+id/retain"
+        android:layout_gravity="center_horizontal" />
 
     <Button
         android:id="@+id/btn_accept"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="finishActivity"
-        android:text="@string/btn_accept" />
+        android:text="@string/btn_accept"
+        android:layout_margin="8dp" />
 
 </LinearLayout>
