added support for individual MQTT client ids

--- a/mqttpublishplugin/src/main/res/layout/main.xml
+++ b/mqttpublishplugin/src/main/res/layout/main.xml
@@ -41,6 +41,13 @@
             android:layout_weight="0.25" />
     </LinearLayout>
 
+    <EditText
+        android:id="@+id/client_id"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:hint="@string/client_id_hint" />
+
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -79,7 +86,7 @@
         android:inputType="textMultiLine"
         android:gravity="top"
         android:layout_margin="8dp"
-        android:layout_weight="0.66" />
+        android:layout_weight="0.37" />
 
     <RadioGroup
         android:layout_width="match_parent"
