Added support for TLSv1. No new TLS versions yet.

--- a/mqttpublishplugin/src/main/res/layout/main.xml
+++ b/mqttpublishplugin/src/main/res/layout/main.xml
@@ -41,12 +41,29 @@
             android:layout_weight="0.25" />
     </LinearLayout>
 
-    <EditText
-        android:id="@+id/client_id"
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:hint="@string/client_id_hint" />
+        android:layout_gravity="center_horizontal">
+
+        <EditText
+            android:id="@+id/client_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:hint="@string/client_id_hint"
+            android:layout_weight="1" />
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/ssl_hint"
+            android:id="@+id/ssl"
+            android:layout_weight="0.25"
+            android:layout_margin="8dp" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:orientation="horizontal"
